# frontend

./: Dockerfile  Makefile  pyproject.toml
.devcontainer/: devcontainer.json
.envs/: development.env  production.env
source/: main.py
source/frameworks_and_devices/external_interfaces/backend/: client.py
source/frameworks_and_devices/user_interface/: __init__.py
source/frameworks_and_devices/user_interface/molecules/: frequency_radio.py  status_selectbox.py
source/frameworks_and_devices/user_interface/organisms/: add_entry_dialog.py  delete_entry_dialog.py  entries_data_editor.py  statistics.py  statistics_metrics.py  update_amount_inside_cajita_dialog.py
source/frameworks_and_devices/user_interface/pages/: home.py
