[tool.poetry]
name = "frontend"
version = "0.2.0"
description = ""
authors = ["Marco Carmona <marcocarmonadev@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
pydantic-settings = "^2.3.3"
pydantic = "^2.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
